  30 May 2014; Poncho <poncho@spahan.ch> +metadata.xml, mailnag-9999.ebuild:
  mail-client/mailnag: switch branch, QA